# LeviPoc

./: .gitmodules  README.md
AnimationControllerExample/: main.qml
BasicFunctions/: BasicFunctions.qmlproject  BasicFunctions.qmlproject.qtds  CMakeLists.txt  qmlmodules
BasicFunctions/content/: App.qml  Screen01.qml
BasicFunctions/imports/: CMakeLists.txt
BasicFunctions/imports/BasicFunctions/: CMakeLists.txt  qmldir
BasicFunctions/imports/BasicFunctions/designer/: plugin.metainfo
BasicFunctions/src/: import_qml_plugins.h
DragTest/: main.qml
HelloLevi/: main.cpp  main.qml
ItemRefreshSample/: CMakeLists.txt  main.cpp  main.qml
LeviDesign/: CMakeLists.txt  main.cpp
LeviDesignUI/: CMakeLists.txt  LeviDesignUI.qmlproject  LeviDesignUI.qmlproject.qtds  qmlmodules
LeviDesignUI/content/: App.qml  AppFrame.qml  AppFrameBehavior.qml  Command.qml  Screen01.ui.qml.leqGva
LeviDesignUI/imports/: CMakeLists.txt
LeviDesignUI/imports/LeviDesignUI/: CMakeLists.txt  Constants.qml  qmldir
LeviDesignUI/imports/LeviDesignUI/designer/: plugin.metainfo
LeviDesignUI/src/: import_qml_plugins.h
LeviDocumentModel/: CMakeLists.txt  levidocumentmodel.cpp  levidocumentmodel.h  main.cpp
LeviPoc/: LeviPoc.pro
LeviPoc/ScriptConsole/: main.qml
LeviPoc/Thumbnail/: main.qml
MetaDataSample/: CMakeLists.txt  main.cpp  main.qml
MetaFunctions/: CMakeLists.txt  main.cpp  qmlmeta.cpp  qmlmeta.h
MultiWindowExcercise/: main.qml
QmlDom/: CMakeLists.txt
QmlDomSample/: CMakeLists.txt  Sample.qml  main.cpp
QmlMutableDomSample01/: CMakeLists.txt  main.cpp
QmlTypeLoader/: CMakeLists.txt  main.cpp  main.qml
RenderControlExercise/: RenderControlExercise.pro  main.cpp  main.qml  movierenderer.cpp  movierenderer.h  qquickeditorwidget.cpp  qquickeditorwidget.h
SingleEngineExcercise/: BasicItem.qml  SingleEngineExcercise.pro  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  qml.qrc
Thumbnail/: main.qml
